--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width"/>
     <title>Cats, Cats, Cats, Cats, &amp; Cats</title>
-    <link rel="stylesheet" type ="text/css" href="css/main1.css" />
+    <link rel="stylesheet" type ="text/css" href="css/main.css" />
 </head>
 <body>
     <div class="wrapper">
